package pt.ipp.isep.dei.esoft.project.domain.model;

public interface EmailService {
    boolean sendEmail(String email,String msg);
}
