@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model - US23 Assign Team to entry in the Agenda


class Collaborator {
    name
    dateOfBirth
    admissionDate
    phoneNumber
    taxpayerNumber
    email
}

class GreenSpaceManager {
}

class Team{
    id
}

class EmailService{
}

class ToDoList {
}

class TaskToDoList{
    status
    urgency
    aproxExpectedDuration
}

class TaskAgenda{
    startDate
    endDate
    expectedDuration
}


class Task {
    description

}

class Agenda{
}

Collaborator  <|--  GreenSpaceManager

Team "1" --u- "*" TaskAgenda : executes by <

Agenda "1" -- "*" TaskAgenda : contains >

EmailService "1" -u "*" Team : makes use of <

Collaborator "1..*" ---- "1" Team : Contains <

(Task,ToDoList) .. TaskToDoList

(GreenSpaceManager,TaskAgenda) .. Team : assign Team

TaskAgenda "1" -- "1" TaskToDoList : includes >

ToDoList "1" -- "*" TaskToDoList : includes  >

TaskToDoList "1" -u- "1" Task : contains >
@enduml